--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/bf1e8130c0.js" crossorigin="anonymous"></script>
     <title>Griselda Heredia</title>
 </head>
 <body>
@@ -22,43 +23,75 @@
         </header>
         <div class="servicios wrapper">
             <div class="serviciosDescripcion">
-                <div>imagen</div>
-                <div>titulo de servicio</div>
-                <div>lista referido al servicio</div>
+                <div><i class="fa-solid fa-receipt fa-2xl"></i></div>
+                <div><h4>Trámites de Rentas</h4></div>
+                <div class="listaServicios">
+                    <li>Altas y bajas por cambio de radicación.</li>
+                    <li>Baja de patentes por Siniestro, Robo, Hurto o Destrucción.</li>
+                    <li>Altas de patente por Recupero.</li>
+                    <li>Estado de deudas, impresión de Boletas para el pago y pedido de Plan de facilidades.</li>
+                    <li>Cambio de titularidad.</li>
+                    <li>Presentación de la Denuncia de Venta ante Rentas y Tribunal de Faltas.</li>
+                </div>
             </div>
             <div class="serviciosDescripcion">
-                <div>imagen</div>
-                <div>titulo de servicio</div>
-                <div>lista referido al servicio</div>
+                <div><i class="fa-regular fa-pen-to-square fa-2xl"></i></div>
+                <div><h4>Trámite de usados</h4></div>
+                <div class="listaServicios">
+                    <li>Solicitud, renovación, revocación y pedido de duplicados de cédulas de identificación y autorizados a conducir.</li>
+                    <li>Duplicado de títulos.</li>
+                    <li>Transferencia por compraventa, sucesión, remate y otras operaciones.</li>
+                    <li>Denuncia de compra.</li>
+                </div>
             </div>
             <div class="serviciosDescripcion">
-                <div>imagen</div>
-                <div>titulo de servicio</div>
-                <div>lista referido al servicio</div>
+                <div><i class="fa-solid fa-file-invoice-dollar fa-2xl"></i></div>
+                <div><h4>Venta de vehículo</h4></div>
+                <div class="listaServicios">
+                    <li>Denuncia de Venta.</li>
+                    <li>Llenado de la Verificación Policial(Formulario 12).</li>
+                    <li>Informes y certificados de dominio actuales e históricos para identificar a los titulares y si pesa algún tipo de prenda sobre el vehículo o inhibición.</li>
+                    <li>Consulta de infracciones de tránsito en la totalidad de las jurisdicciones adheridas (formulario 13 i).</li>
+                </div>
             </div>
             <div class="serviciosDescripcion">
-                <div>imagen</div>
-                <div>titulo de servicio</div>
-                <div>lista referido al servicio</div>
+                <div><i class="fa-solid fa-shield-halved fa-shake fa-2xl"></i></div>
+                <div><h4>Trámites ante el seguro</h4></div>
+                <div class="listaServicios">
+                    <li>Bajas por siniestro, robo, hurto, destrucción y altas por recupero.</li>
+                    <li>Baja del vehículo ante la delegación tributaria correspondiente.</li>
+                    <li>Consulta de infracciones en todo el país.</li>
+                </div>
             </div>
             <div class="serviciosDescripcion">
-                <div>imagen</div>
-                <div>titulo de servicio</div>
-                <div>lista referido al servicio</div>
+                <div><i class="fa-solid fa-key fa-2xl"></i></div>
+                <div><h4>Trámites de 0Km</h4></div>
+                <div class="listaServicios">
+                    <li>Inscripción inicial (patentamientos) de su automóvil, moto vehículo o maquinaria agrícola.</li>
+                    <li>Asesoramiento integral sobre la documentación vinculada a su automotor.</li>
+                </div>
             </div>
             <div class="serviciosDescripcion">
-                <div>imagen</div>
-                <div>titulo de servicio</div>
-                <div>lista referido al servicio</div>
-            </div>
-        </div>
-        <div class="contacto">
-            <div>
-                numero, mails, formulario, etc
+                <div><i class="fa-regular fa-file-lines fa-2xl"></i></div>
+                <div><h4>Otros trámites</h4></div>
+                <div class="listaServicios">
+                    <li>Confección de contratos de prendas, inscripción y cancelación de las mismas.</li>
+                    <li>Emisión de CETA.</li>
+                    <li>Emisión y pago de sellados para verificar su vehículo.</li>
+                    <li>R.U.T.A. (emisión, renovación, y revocación) para empresas y particulares.</li>
+                    <li>Altas y bajas de motor.</li>
+                    <li>Levantamiento de embargos, inhibición.</li>
+                </div>
             </div>
         </div>
         <footer>
-            link a redes sociales y creador de web.
+            <p>
+                Te brindamos diferentes medios de contacto para tu asesoramiento: 
+            </p>
+            <div>Tel.: xx-xxxx-xxxx</div>
+            <div>Red social X</div>
+            <div>mail: xxxx@xxxxxx.com</div>
+        </div>
         </footer>
     </div>
 </body>
