--- a/index.html
+++ b/index.html
@@ -85,13 +85,37 @@
             </div>
         </div>
         <footer>
-            <p>
-                Te brindamos diferentes medios de contacto para tu asesoramiento: 
-            </p>
-            <div>Tel.: xx-xxxx-xxxx</div>
-            <div>Red social X</div>
-            <div>mail: xxxx@xxxxxx.com</div>
-        </div>
+            <div class="contacto">
+                <div>Tel.: xx-xxxx-xxxx</div>
+                <div class="socialMedia">
+                    Red social X
+                </div>
+                <div>mail: xxxx@xxxxxx.com</div>
+            </div>
+            <div>
+                <!-- Para el envío del formulario uso la API "formsubmit" -->
+                <form id="form" action="https://formsubmit.co/herediagriselda@gmail.com" method="POST" class="col mb-3 ">
+                    <h3>Contactate</h3>
+                        <div class="col-sm-8 mb-3">
+                            <input class="form-control" name="name" id="name" type="text" placeholder="Nombre completo" required>
+                        </div>
+                        <div class="col-sm-8 mb-3">
+                            <input class="form-control" name="email" id="email" type="email" placeholder="E-mail" required>
+                        </div>
+                        <div class="col-sm-2 mb-4">
+                            <input type="text" id="codArea" name="codigo de area" class="form-control" placeholder="Cód. de área">
+                        </div>
+                        <div class="col-sm-6 mb-4">
+                            <input type="text" id="telefono" name="telefono" class="form-control" placeholder="teléfono">
+                        </div>
+                        <div class="col-sm-8 mb-4">
+                            <textarea class="form-control" name="message" class="form-label" id="message" type="text" placeholder="Ingrese su consulta aquí" rows="3" required></textarea>
+                        </div class="col-sm-4">
+                        <div>
+                            <button class="btn btn-success" type="submit">ENVIAR</button>
+                        </div>
+                </form>
+            </div>
         </footer>
     </div>
 </body>
