--- a/index.html
+++ b/index.html
@@ -86,11 +86,13 @@
         </div>
         <footer>
             <div class="contacto">
-                <div>Tel.: xx-xxxx-xxxx</div>
-                <div class="socialMedia">
-                    Red social X
-                </div>
-                <div>mail: xxxx@xxxxxx.com</div>
+                <ul>
+                    <li>Tel.: xx-xxxx-xxxx</li>
+                    <li class="socialMedia">
+                        <i class="fa-brands fa-square-instagram fa-2xl"></i>
+                    </li>
+                    <li>mail: xxxx@xxxxxx.com</li>
+                </ul>
             </div>
             <div>
                 <!-- Para el envío del formulario uso la API "formsubmit" -->
