--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <body>
     <div class="contenedor">
         <header>
-            <div class="wrapper">
+            <div class="navLogo wrapper">
                 <div class="logo">Griselda Heredia</div>
                 <nav>
-                    <a href=#>Home</a>
-                    <a href=#>About</a>
-                    <a href=#>Contacto</a>
+                    <a class="links" href=#>Home</a>
+                    <a class="links" href=#servicios>Servicios</a>
+                    <a class="links" href=#contacto>Contacto</a>
                 </nav>
             </div>
         </header>
-        <div class="servicios wrapper">
+        <div class="servicios wrapper" id="servicios">
             <div class="serviciosDescripcion">
                 <div><i class="fa-solid fa-receipt fa-2xl"></i></div>
                 <div><h4>Trámites de Rentas</h4></div>
@@ -84,14 +84,14 @@
                 </div>
             </div>
         </div>
-        <footer>
+        <footer id="contacto">
             <div class="contacto">
                 <ul>
-                    <li>Tel.: xx-xxxx-xxxx</li>
+                    <li>Tel.: 11 - 6868 - 8107</li>
                     <li class="socialMedia">
-                        <i class="fa-brands fa-square-instagram fa-2xl"></i>
+                        <i id="instagram" class="fa-brands fa-square-instagram fa-2xl"></i>
                     </li>
-                    <li>mail: xxxx@xxxxxx.com</li>
+                    <li>E-mail: <a href="mailto:herediagriseld@gmail.com">Mi mail de contacto</a></li>
                 </ul>
             </div>
             <div>
