mejora en los menus y contactos

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                     <li class="socialMedia">
                         <i id="instagram" class="fa-brands fa-square-instagram fa-2xl"></i>
                     </li>
-                    <li>E-mail: <a href="mailto:herediagriseld@gmail.com">Mi mail de contacto</a></li>
+                    <li>E-mail: <a href="mailto:herediagriseld@gmail.com">Griselda Heredia</a></li>
                 </ul>
             </div>
-            <div>
+            <div class="contacto2">
                 <!-- Para el envío del formulario uso la API "formsubmit" -->
                 <form id="form" action="https://formsubmit.co/herediagriselda@gmail.com" method="POST" class="col mb-3 ">
                     <h3>Contactate</h3>
@@ -104,7 +104,7 @@
                         <div class="col-sm-8 mb-3">
                             <input class="form-control" name="email" id="email" type="email" placeholder="E-mail" required>
                         </div>
-                        <div class="col-sm-2 mb-3">
+                        <div class="col-sm-3 mb-3">
                             <input type="text" id="codArea" name="codigo de area" class="form-control" placeholder="Cód. de área">
                         </div>
                         <div class="col-sm-6 mb-3">
