acceso a redes y contacto

--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
         <footer id="contacto">
             <div class="contacto">
                 <ul>
-                    <li>Tel.: 11 - 6868 - 8107</li>
+                    <li class="contactoTelefono">Tel.: 11 - 6868 - 8107</li>
                     <li class="socialMedia">
-                        <i id="instagram" class="fa-brands fa-square-instagram fa-2xl"></i>
+                        <a href="https://www.instagram.com/heredia_gestoria/"><i id="instagram" class="fa-brands fa-square-instagram fa-2xl"></i></a>
                     </li>
-                    <li>E-mail: <a href="mailto:herediagriseld@gmail.com">Griselda Heredia</a></li>
+                    <li class="eMail">E-mail: <a href="mailto:herediagriseld@gmail.com">Griselda Heredia</a></li>
                 </ul>
             </div>
             <div class="contacto2">
