acceso a redes y contacto

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <li class="socialMedia">
                         <a href="https://www.instagram.com/heredia_gestoria/"><i id="instagram" class="fa-brands fa-square-instagram fa-2xl"></i></a>
                     </li>
-                    <li class="eMail">E-mail: <a href="mailto:herediagriseld@gmail.com">Griselda Heredia</a></li>
+                    <li class="eMail">E-mail: <a href="mailto:herediagriselda@gmail.com">Griselda Heredia</a></li>
                 </ul>
             </div>
             <div class="contacto2">
