--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
     <link rel="stylesheet" href="/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/bf1e8130c0.js" crossorigin="anonymous"></script>
+    <script src="./js.js"></script>
     <title>Griselda Heredia</title>
 </head>
 <body>
     <div class="contenedor">
         <header>
             <div class="navLogo wrapper">
-                <div class="logo">Griselda Heredia</div>
+                <div class="logo">
+                    <span class="span1">Griselda</span><br>
+                    <span class="span2">Heredia</span>
+                </div>
                 <nav>
                     <a class="links" href=#>Home</a>
                     <a class="links" href=#servicios>Servicios</a>
