--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                     <span class="span1">Griselda</span><br>
                     <span class="span2">Heredia</span>
                 </div>
-                <nav>
+                <nav class="navegador">
                     <a class="links" href=#>Home</a>
                     <a class="links" href=#servicios>Servicios</a>
                     <a class="links" href=#contacto>Contacto</a>
                 </nav>
             </div>
         </header>
-        <div class="servicios wrapper" id="servicios">
+        <div class="servicios" id="servicios">
             <div class="serviciosDescripcion">
                 <div><i class="fa-solid fa-receipt fa-2xl"></i></div>
                 <div><h4>Trámites de Rentas</h4></div>
