--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="./imagenes/seguro-de-auto.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/bf1e8130c0.js" crossorigin="anonymous"></script>
-    <script src="./js.js"></script>
     <title>Griselda Heredia</title>
 </head>
 <body>
@@ -22,8 +22,9 @@
                     <a class="links" href=#>Home</a>
                     <a class="links" href=#servicios>Servicios</a>
                     <a class="links" href=#contacto>Contacto</a>
-                </nav>
+                </nav>                
             </div>
+            <p class="freepik">Diseñado por: <a href="https://www.freepik.es">Freepik</a></p>
         </header>
         <div class="servicios" id="servicios">
             <div class="serviciosDescripcion">
