--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
                             <input class="form-control" name="email" id="email" type="email" placeholder="E-mail" required>
                         </div>
                         <div class="col-sm-3 mb-3">
-                            <input type="text" id="codArea" name="codigo de area" class="form-control" placeholder="Cód. de área">
+                            <input type="text" id="codArea" name="codigo de area" class="form-control" placeholder="Cód. de área" required>
                         </div>
                         <div class="col-sm-6 mb-3">
-                            <input type="text" id="telefono" name="telefono" class="form-control" placeholder="teléfono">
+                            <input type="text" id="telefono" name="telefono" class="form-control" placeholder="teléfono" required>
                         </div>
                         <div class="col-sm-8 mb-4">
                             <textarea class="form-control" name="message" class="form-label" id="message" type="text" placeholder="Ingrese su consulta aquí" rows="3" required></textarea>
